--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/test?&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ?? ??? ?? ? ?? ?? --> ????? ?? ???? validate or none? ???? ??!! (??? ??? update)
+spring.jpa.hibernate.ddl-auto=create
+
+# mysql ??
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# ?? ??
+logging.level.org.hibernate=info
+
+# ??????? ??? ?? SQL?? ??? ??
+spring.jpa.properties.hibernate.show_sql=true
+# SQL?? ??? ?? ??
+spring.jpa.properties.hibernate.format_sql=true
+# ??? ?? ??
+spring.jpa.properties.hibernate.use_sql_comments=true
